Hero buttons on mobile fixed

--- a/css/main.css
+++ b/css/main.css
@@ -238,7 +238,7 @@ article p{
 
     .hero_buttons .button{
         display: block;
-        width: 100%;
+        width: auto;
         text-align: center;
     }
 }
